increasing font size to prevent input-zoom on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -311,7 +311,7 @@ h1 {
   }
 
   .lb-users-form input {
-    font-size: 13px;
+    font-size: 16px;
     padding: 8px;
   }
 
@@ -421,7 +421,7 @@ h1 {
   }
 
   .lb-users-form input {
-    font-size: 12px;
+    font-size: 16px;
     padding: 6px 8px;
   }
 
